--- a/css/emm.css
+++ b/css/emm.css
@@ -14,8 +14,7 @@ GNU General Public License for more details.
 */
 
 .media-frame .emm-content {
-	background: #f5f5f5;
-	padding: 16px 0 0;
+	background: #fff;
 }
 
 .media-frame .emm-content .emm-error {
@@ -33,7 +32,8 @@ GNU General Public License for more details.
 }
 
 .media-frame .emm-content .emm-toolbar {
-	padding: 0 16px;
+	padding: 10px 16px;
+	background: #f5f5f5;
 }
 
 .media-frame .emm-content .emm-items {
@@ -80,14 +80,14 @@ GNU General Public License for more details.
 	float: none;
 	max-width: 800px;
 	text-align: left;
-	margin: 10px 10px 10px 5px;
+	margin: 6px 10px;
 	border: 1px solid #ddd;
 	padding: 13px;
 	cursor: pointer;
 }
 
 .media-frame .emm-content-twitter .emm-item:hover {
-	background-color: #fff;
+	border-color: #999;
 }
 
 .media-frame .emm-content-twitter .emm-item.selected {
@@ -96,7 +96,19 @@ GNU General Public License for more details.
 
 .media-frame .emm-content-twitter .emm-item .emm-item-thumb {
 	float: left;
-	width: 48px;
-	height: 48px;
 	margin: 0 10px 10px 0;
 }
+
+.media-frame .emm-content-twitter .emm-item .emm-item-thumb img {
+	width: 48px;
+	height: 48px;
+}
+
+.media-frame .emm-content-twitter .emm-item .emm-item-author {
+	font-size: 18px;
+}
+
+.media-frame .emm-content-twitter .emm-item .emm-item-author-screen-name {
+	color: #bbb;
+}
+
