--- a/css/emm.css
+++ b/css/emm.css
@@ -32,14 +32,18 @@ GNU General Public License for more details.
 }
 
 .media-frame .emm-content .emm-toolbar {
-	padding: 10px 16px;
 	background: #f5f5f5;
+}
+
+.media-frame .emm-content .emm-toolbar-container {
+	padding: 10px 16px;
 }
 
 .media-frame .emm-content .emm-items {
 	clear: both;
 }
 
+.media-frame .emm-content .emm-toolbar select,
 .media-frame .emm-content .emm-toolbar input {
 	float: left;
 }
@@ -122,4 +126,9 @@ GNU General Public License for more details.
 .media-frame .emm-content-twitter .emm-item .emm-item-date {
 	color: #bbb;
 	clear: left;
+}
+
+#emm_twitter_map_canvas {
+	width: 100%;
+	height: 250px
 }
