--- a/css/emm.css
+++ b/css/emm.css
@@ -171,24 +171,12 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
 /* ************************ */
 /* Youtube-specific styles: */
 /* ************************ */
-.emm-item-youtube {
-	width: 320px;
-}
-
 .emm-item-youtube .emm-item-content {
 	font-weight: bold;
 }
 
-.emm-item-youtube .emm-item-thumb img {
-	height: 180px;
-}
-
 .emm-content-youtube .emm-items {
 	padding-top: 15px;
-}
-
-.emm-content-youtube .emm-item {
-	height: 250px;
 }
 
 .media-frame .spinner-bottom {
@@ -206,7 +194,7 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
  * One column layout
  * */
 @media (max-width: 699px) {
-	.attachment {
+	.emm-content-youtube-all .attachment {
 		width: 100%;
 	}
 }
@@ -215,8 +203,8 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
  * Two column layout
  * */
 @media (min-width: 700px) and (max-width: 1199px) {
-	.attachment {
-		width: 47%;
+	.emm-content-youtube-all .attachment {
+		width: 45%;
 	}
 }
 
@@ -224,7 +212,7 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
  * Three column layout
  * */
 @media (min-width: 1200px) and (max-width: 1499px) {
-	.attachment {
+	.emm-content-youtube-all .attachment {
 		width: 31%;
 	}
 }
@@ -233,7 +221,7 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
  * Four column layout
  * */
 @media (min-width: 1500px) {
-	.attachment {
+	.emm-content-youtube-all .attachment {
 		width: 23%;
 	}
 }
