Improvements to spacing and overlap of multi-line search results. See 5eb6e335fba

--- a/css/emm.css
+++ b/css/emm.css
@@ -171,7 +171,8 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
 /* ************************ */
 
 .emm-item-youtube .emm-item-main {
-	max-height: 47px;
+	max-height: 54px;
+	overflow: hidden;
 }
 
 .emm-item-youtube .emm-item-content {
