--- a/css/emm.css
+++ b/css/emm.css
@@ -167,7 +167,7 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
 }
 
 /* ************************ */
-/* Youtube-specific styles: */
+/* YouTube-specific styles: */
 /* ************************ */
 
 .emm-item-youtube .emm-item-main {
