Fixed the responsive design for the "by_user" tab in Youtube

--- a/css/emm.css
+++ b/css/emm.css
@@ -198,7 +198,7 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
  * One column layout
  * */
 @media (max-width: 699px) {
-	.emm-content-youtube-all .attachment {
+	.emm-content-youtube .attachment {
 		width: 100%;
 	}
 }
@@ -207,7 +207,7 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
  * Two column layout
  * */
 @media (min-width: 700px) and (max-width: 1199px) {
-	.emm-content-youtube-all .attachment {
+	.emm-content-youtube .attachment {
 		width: 45%;
 	}
 }
@@ -216,7 +216,7 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
  * Three column layout
  * */
 @media (min-width: 1200px) and (max-width: 1499px) {
-	.emm-content-youtube-all .attachment {
+	.emm-content-youtube .attachment {
 		width: 31%;
 	}
 }
@@ -225,7 +225,7 @@ html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
  * Four column layout
  * */
 @media (min-width: 1500px) {
-	.emm-content-youtube-all .attachment {
+	.emm-content-youtube .attachment {
 		width: 23%;
 	}
 }
