Shows the "load more tweets" button once a set of tweets is loaded.
fixes #29.

--- a/css/mexp.css
+++ b/css/mexp.css
@@ -90,6 +90,8 @@ body.mp6 .media-frame .mexp-content .mexp-toolbar {
 
 .media-frame .mexp-content .mexp-pagination a {
 	float: left;
+	position: absolute;
+	top: 65px;
 }
 
 .media-frame .mexp-content .clearfix:after {
