Only show Twitter 'load more' button for screens where the user has made searches.
Prevents the 'load more' button being clickable while an AJAX request
is in progress, and also prevents the button showing up when you go to
a new tab. See #29.

Most of this is a temporary change until we integrate Infinite Search
for the Twitter service, see #39.

--- a/css/mexp.css
+++ b/css/mexp.css
@@ -92,7 +92,6 @@ body.mp6 .media-frame .mexp-content .mexp-toolbar {
 }
 
 .button.mexp-pagination {
-	display: none;
 	margin-top: 15px;
 }
 
@@ -177,12 +176,17 @@ html.ie8 .media-frame .mexp-content .mexp-item.selected {
 	background: transparent no-repeat center center;
 }
 
+#twitter-loadmore {
+	display: none;
+}
+
+
 /* ************************ */
 /* YouTube-specific styles: */
 /* ************************ */
 
 #youtube-loadmore {
-	display: none;
+	display: none !important;
 }
 
 .media-frame .mexp-item-youtube .mexp-item-main {
